--- a/thisispythoncodingtest/05_dfs_bfs/4_test.ipynb
+++ b/thisispythoncodingtest/05_dfs_bfs/4_test.ipynb
@@ -2,61 +2,131 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "18e9c3ba",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "n = 1260\n",
-    "count = 0\n",
-    "\n",
-    "coin_types = [500,100,50,10]\n",
-    "for coin in coin_types:\n",
-    "    count += n // coin\n",
-    "    n %= coin\n",
-    "print(count)\n",
-    "print(n)"
+    "test = input()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6f899160",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 8 3\n",
-      "2 4 5 4 6\n"
-     ]
-    }
-   ],
-   "source": [
-    "n, m, k = map(int,input().split())\n",
-    "data = list(map(int,input().split()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "91c031c5",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 4, 5, 4, 6]"
+       "'234252'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2', '3', '4', '2', '5', '2']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb = map(int,input())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['w', '2', '3', '4', '2', '5']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list('w23425')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<map at 0x1fe20fabe20>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(nb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<map at 0x1fe20fabe20>"
       ]
      },
      "execution_count": 7,
@@ -65,84 +135,23 @@
     }
    ],
    "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "d8dfd98b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.sort(reverse=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "a8dc054a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[6, 5, 4, 4, 2]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d34f20b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for item in data:\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "77d8570d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "idx"
+    "nb"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1e2299e",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -157,8 +166,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
-  }
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
