오랜만에 커밋

--- a/python exercise/초보자를 위한 파이썬 300제.ipynb
+++ b/python exercise/초보자를 위한 파이썬 300제.ipynb
@@ -2491,10 +2491,842 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oh my god\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 260\n",
+    "class OMG : \n",
+    "    def print(self) :\n",
+    "        print(\"Oh my god\")\n",
+    "myStock = OMG()\n",
+    "myStock.print()\n",
+    "# OMG.print(myStock)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 261-270"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Stock:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Stock object at 0x0000018D920625E0>\n",
+      "005930\n",
+      "삼성전자\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Stock:\n",
+    "    def __init__(self, name,code):\n",
+    "        self.name = name\n",
+    "        self.code = code\n",
+    "\n",
+    "삼성 = Stock(\"삼성전자\", \"005930\")\n",
+    "print(삼성)\n",
+    "print(삼성.code)\n",
+    "print(삼성.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Stock object at 0x0000018D92062F10>\n",
+      "005930\n",
+      "삼성전자\n",
+      "005930\n",
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Stock:\n",
+    "    def __init__(self, name,code):\n",
+    "        self.name = name\n",
+    "        self.code = code\n",
+    "\n",
+    "    def set_name(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def set_code(self, code):\n",
+    "        self.code = code\n",
+    "\n",
+    "삼성 = Stock(\"삼성전자\", \"005930\")\n",
+    "print(삼성)\n",
+    "print(삼성.code)\n",
+    "print(삼성.name)\n",
+    "삼성.set_name(\"test\")\n",
+    "print(삼성.code)\n",
+    "print(삼성.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Stock:\n",
+    "    def __init__(self, name, code, per, pbr, 배당수익률):\n",
+    "        self.name = name\n",
+    "        self.code = code\n",
+    "        self.per = per\n",
+    "        self.pbr = pbr\n",
+    "        self.배당수익률 = 배당수익률\n",
+    "\n",
+    "    def set_name(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def set_code(self, code):\n",
+    "        self.code = code\n",
+    "\n",
+    "    def get_name(self):\n",
+    "        return self.name\n",
+    "\n",
+    "    def get_code(self):\n",
+    "        return self.code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "23 1\n",
+      "3\n",
+      "23 3\n",
+      "4\n",
+      "23 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "testLi = []\n",
+    "testLi.append(Stock(\"1\",23,42,42,42))\n",
+    "testLi.append(Stock(\"3\",23,42,42,42))\n",
+    "testLi.append(Stock(\"4\",23,42,42,42))\n",
+    "for item in testLi:\n",
+    "    print(item.name)\n",
+    "    print(item.code, item.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 271-280"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Account:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "김민수\n",
+      "100\n",
+      "SC은행\n",
+      "061-33-928883\n",
+      "2\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "class Account:\n",
+    "    accountList = []\n",
+    "    def __init__(self, name, balance):\n",
+    "        self.name = name\n",
+    "        self.balance = balance\n",
+    "        self.bank = \"SC은행\"\n",
+    "        num1 = random.randint(0, 999)\n",
+    "        num2 = random.randint(0, 99)\n",
+    "        num3 = random.randint(0, 999999)\n",
+    "\n",
+    "        num1 = str(num1).zfill(3)      # 1 -> '1' -> '001'\n",
+    "        num2 = str(num2).zfill(2)      # 1 -> '1' -> '01'\n",
+    "        num3 = str(num3).zfill(6)      # 1 -> '1' -> '0000001'\n",
+    "        self.account_number = num1 + '-' + num2 + '-' + num3  # 001-01-000001\n",
+    "        # global accountList\n",
+    "        # accountList.add(self)\n",
+    "        Account.accountList.append(self)\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def get_account_num(cls):\n",
+    "        return len(cls.accountList)\n",
+    "        # return len(Account.accountList)\n",
+    "\n",
+    "kim = Account(\"김민수\", 100)\n",
+    "lee = Account(\"이\",23)\n",
+    "print(kim.name)\n",
+    "print(kim.balance)\n",
+    "print(kim.bank)\n",
+    "print(kim.account_number)\n",
+    "print(Account.get_account_num())\n",
+    "print(kim.get_account_num())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Account at 0x18d913d7520>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Account(\"김wwdafgwefeaw민수\", 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Account at 0x18d920854c0>, <__main__.Account at 0x18d913d7520>]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Account.accountList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. 오늘은 REPL 이라는 단어에 대해 알아보려고 합니다.\n",
+    "# 코딩을 공부하다보면 많이 보이는 단어이지만 그냥 무심히 지나치는 경우가 많습니다.\n",
+    "# Read Eval Print Loop 이라는 단어의 줄임말 입니다.\n",
+    "\n",
+    "# 입력(read)\n",
+    "# 평가(eval)\n",
+    "# 출력(print) \n",
+    "# 반복(loop)\n",
+    "\n",
+    "# 기본적으로 REPL은 명령줄 인터페이스인 CLI위에서 작동 됩니다.  \n",
+    "# 윈도우에서는 명령프롬프트(CMD), 파워쉘(PowerShell)\n",
+    "# 리눅스와 맥에서는 터미널(Terminal) 환경에서 사용이 가능합니다.\n",
+    "\n",
+    "\n",
+    "# 출처: https://gocoder.tistory.com/1628 [고코더 IT Express]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "입금은 1원 이상만 가능합니다.\n",
+      "입금 처리 성공\n",
+      "102\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 274\n",
+    "import random\n",
+    "\n",
+    "class Account:\n",
+    "    accountList = []\n",
+    "    def __init__(self, name, balance):\n",
+    "        self.name = name\n",
+    "        self.balance = balance\n",
+    "        self.bank = \"SC은행\"\n",
+    "        num1 = random.randint(0, 999)\n",
+    "        num2 = random.randint(0, 99)\n",
+    "        num3 = random.randint(0, 999999)\n",
+    "\n",
+    "        num1 = str(num1).zfill(3)      # 1 -> '1' -> '001'\n",
+    "        num2 = str(num2).zfill(2)      # 1 -> '1' -> '01'\n",
+    "        num3 = str(num3).zfill(6)      # 1 -> '1' -> '0000001'\n",
+    "        self.account_number = num1 + '-' + num2 + '-' + num3  # 001-01-000001\n",
+    "        # global accountList\n",
+    "        # accountList.add(self)\n",
+    "        Account.accountList.append(self)\n",
+    "\n",
+    "    def deposit(self, money):\n",
+    "        if money <1:\n",
+    "            print(\"입금은 1원 이상만 가능합니다.\")\n",
+    "            return\n",
+    "        self.balance += money\n",
+    "        print(\"입금 처리 성공\")\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def get_account_num(cls):\n",
+    "        return len(cls.accountList)\n",
+    "        # return len(Account.accountList)\n",
+    "\n",
+    "kim = Account(\"김민수\", 100)\n",
+    "print(kim.balance)\n",
+    "kim.deposit(0.4)\n",
+    "kim.deposit(2)\n",
+    "print(kim.balance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. 정적메소드(@classmethod와 @staticmethod)\n",
+    "# 정적메소드라 함은 클래스에서 직접 접근할 수 있는 메소드입니다.\n",
+    "# 파이썬에서는 클래스에서 직접 접근할 수 있는 메소드가 두가지가 있습니다.staticmethod와 classmethod 입니다.\n",
+    "# # 하지만 파이썬에서는 다른언어와는 다르게 정적메소드임에도 불구하고 인스턴스에서도 접근이 가능합니다. 이 차이에 유의해야합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "입금 처리 성공\n",
+      "102\n",
+      "출금되었습니다.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 275\n",
+    "# 274\n",
+    "import random\n",
+    "\n",
+    "class Account:\n",
+    "    accountList = []\n",
+    "    def __init__(self, name, balance):\n",
+    "        self.name = name\n",
+    "        self.balance = balance\n",
+    "        self.bank = \"SC은행\"\n",
+    "        num1 = random.randint(0, 999)\n",
+    "        num2 = random.randint(0, 99)\n",
+    "        num3 = random.randint(0, 999999)\n",
+    "\n",
+    "        num1 = str(num1).zfill(3)      # 1 -> '1' -> '001'\n",
+    "        num2 = str(num2).zfill(2)      # 1 -> '1' -> '01'\n",
+    "        num3 = str(num3).zfill(6)      # 1 -> '1' -> '0000001'\n",
+    "        self.account_number = num1 + '-' + num2 + '-' + num3  # 001-01-000001\n",
+    "        # global accountList\n",
+    "        # accountList.add(self)\n",
+    "        Account.accountList.append(self)\n",
+    "\n",
+    "    def deposit(self, money):\n",
+    "        if money <1:\n",
+    "            print(\"입금은 1원 이상만 가능합니다.\")\n",
+    "            return\n",
+    "        self.balance += money\n",
+    "        print(\"입금 처리 성공\")\n",
+    "    \n",
+    "    def withdraw(self,money):\n",
+    "        if self.balance < money:\n",
+    "            print(\"출금은 계좌의 잔고 이상으로 출금할수 없습니다.\")\n",
+    "        self.balance -= money\n",
+    "        print(\"출금되었습니다.\")\n",
+    "        return money\n",
+    "\n",
+    "    @classmethod\n",
+    "    def get_account_num(cls):\n",
+    "        return len(cls.accountList)\n",
+    "        # return len(Account.accountList)\n",
+    "\n",
+    "kim = Account(\"김민수\", 100)\n",
+    "print(kim.balance)\n",
+    "kim.deposit(2)\n",
+    "print(kim.balance)\n",
+    "kim.withdraw(50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 281-290"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class 차:\n",
+    "    def __init__(self,바퀴,가격):\n",
+    "        self.바퀴 = 바퀴\n",
+    "        self.가격 = 가격\n",
+    "\n",
+    "car = 차(2,1000)\n",
+    "print(car.바퀴)\n",
+    "print(car.가격)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "class 자전차(차):\n",
+    "    pass\n",
+    "\n",
+    "bicycle = 자전차(2, 100)\n",
+    "print(bicycle.가격)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "시마노\n"
+     ]
+    }
+   ],
+   "source": [
+    "class 자전차(차):\n",
+    "    def __init__(self,바퀴,가격, 구동계):\n",
+    "        # super(바퀴,가격)\n",
+    "        super().__init__(바퀴, 가격)\n",
+    "        # 차.__init__(self,바퀴,가격)\n",
+    "        self.구동계 = 구동계\n",
+    "\n",
+    "\n",
+    "bicycle = 자전차(2, 100, \"시마노\")\n",
+    "print(bicycle.구동계)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "시마노\n",
+      "2\n",
+      "바퀴수 2\n",
+      "가격 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 286\n",
+    "class 차:\n",
+    "    def __init__(self, 바퀴, 가격):\n",
+    "        self.바퀴 = 바퀴\n",
+    "        self.가격 = 가격\n",
+    "\n",
+    "    def 정보(self):\n",
+    "        print(\"바퀴수\", self.바퀴)\n",
+    "        print(\"가격\",self.가격)\n",
+    "\n",
+    "class 자전차(차):\n",
+    "    def __init__(self, 바퀴, 가격, 구동계):\n",
+    "        super().__init__(바퀴, 가격)\n",
+    "        #차.__init__(self, 바퀴, 가격)\n",
+    "        self.구동계 = 구동계\n",
+    "\n",
+    "    # def 정보(self):\n",
+    "    #     print(\"바퀴수\", self.바퀴)\n",
+    "    #     print(\"가격\",self.가격)\n",
+    "\n",
+    "bicycle = 자전차(2, 100, \"시마노\")\n",
+    "print(bicycle.구동계)\n",
+    "print(bicycle.바퀴)\n",
+    "bicycle.정보()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "자식호출\n"
+     ]
+    }
+   ],
+   "source": [
+    "class 부모:\n",
+    "  def 호출(self):\n",
+    "    print(\"부모호출\")\n",
+    "\n",
+    "class 자식(부모):\n",
+    "  def 호출(self):\n",
+    "    print(\"자식호출\")\n",
+    "\n",
+    "나 = 자식()\n",
+    "나.호출()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "자식생성\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 289\n",
+    "class 부모:\n",
+    "  def __init__(self):\n",
+    "    print(\"부모생성\")\n",
+    "\n",
+    "class 자식(부모):\n",
+    "  def __init__(self):\n",
+    "    print(\"자식생성\")\n",
+    "나 = 자식()\n",
+    "\n",
+    "# 어라 자바랑 다르네.\n",
+    "# 확인해보니 자바랑 다름."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "자식생성\n",
+      "부모생성\n"
+     ]
+    }
+   ],
+   "source": [
+    "class 부모:\n",
+    "  def __init__(self):\n",
+    "    print(\"부모생성\")\n",
+    "\n",
+    "class 자식(부모):\n",
+    "  def __init__(self):\n",
+    "    print(\"자식생성\")\n",
+    "    super().__init__()\n",
+    "\n",
+    "나 = 자식()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 12. 파일 입출력과 예외처리"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 291-300"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"C:\\\\Users\\\\like_\\\\OneDrive\\\\바탕 화면\\\\새파일.txt\", 'w')\n",
+    "codes = [\"005930\",\"005380\",\"035420\"]\n",
+    "for code in codes:\n",
+    "    f.write(str(code)+\"\\n\")\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"C:\\\\Users\\\\like_\\\\OneDrive\\\\바탕 화면\\\\매수종목2.txt\", mode=\"wt\", encoding=\"utf-8\")\n",
+    "f.write(\"005930 삼성전자\\n\")\n",
+    "f.write(\"005380 현대차\\n\")\n",
+    "f.write(\"035420 NAVER\\n\")\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "f = open(\"C:\\\\Users\\\\like_\\\\OneDrive\\\\바탕 화면\\\\새파일2.csv\", mode=\"wt\", encoding=\"cp949\", newline='')\n",
+    "writer = csv.writer(f)\n",
+    "writer.writerow([\"종목명\", \"종목코드\", \"PER\"])\n",
+    "writer.writerow([\"삼성전자\", \"005930\", 15.59])\n",
+    "writer.writerow([\"NAVER\", \"035420\", 55.82])\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'005930': '삼성전자', '005380': '현대차', '035420': 'NAVER'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open(\"C:\\\\Users\\\\like_\\\\OneDrive\\\\바탕 화면\\\\매수종목2.txt\", 'r')\n",
+    "lines = f.readlines()\n",
+    "testDict = {}\n",
+    "for line in lines:\n",
+    "    line = line.strip()\n",
+    "    종목코드, 종목명 = line.split(\" \")\n",
+    "    testDict[종목코드] = 종목명\n",
+    "f.close()\n",
+    "\n",
+    "print(testDict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.31\n",
+      "0\n",
+      "8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 296\n",
+    "per = [\"10.31\", \"\", \"8.00\"]\n",
+    "\n",
+    "for i in per:\n",
+    "    try:\n",
+    "        print(float(i))\n",
+    "    except:\n",
+    "        print(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 / i 12.5\n",
+      "50 / i 16.666666666666668\n",
+      "안돼\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 298\n",
+    "per = [4, 3, 0]\n",
+    "\n",
+    "for i in per:\n",
+    "    try:\n",
+    "        print(\"50 / i\",50 / i)\n",
+    "    except ZeroDivisionError:\n",
+    "        print(\"안돼\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "list index out of range\n",
+      "list index out of range\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 299\n",
+    "data = [1, 2, 3]\n",
+    "\n",
+    "for i in range(5):\n",
+    "    try:\n",
+    "        print(data[i])\n",
+    "    except IndexError as error:\n",
+    "        print(error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.31\n",
+      "10.31 else occured..!\n",
+      "finally\n",
+      " can not be float\n",
+      "finally\n",
+      "8.0\n",
+      "8.00 else occured..!\n",
+      "finally\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 300\n",
+    "# try, except, else, finally 구조 사용해보기.\n",
+    "\n",
+    "per = [\"10.31\", \"\", \"8.00\"]\n",
+    "for i in per:\n",
+    "    try:\n",
+    "        print(float(i))\n",
+    "    except:\n",
+    "        print(i, \"can not be float\")\n",
+    "    else:\n",
+    "        print(i, \"else occured..!\")\n",
+    "    finally:\n",
+    "        print(\"finally\")"
+   ]
   },
   {
    "cell_type": "code",
