--- a/programmers/test.ipynb
+++ b/programmers/test.ipynb
@@ -23,6 +23,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('*', '+', '-'), ('*', '-', '+'), ('+', '*', '-'), ('+', '-', '*'), ('-', '*', '+'), ('-', '+', '*')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import permutations\n",
+    "a = [\"*\",\"+\",\"-\"]\n",
+    "permute = permutations(a,3)\n",
+    "print(list(permute))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "empty separator",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-dc47ba97b8c4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;34m\"100-200*300-500+20\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: empty separator"
+     ]
+    }
+   ],
+   "source": [
+    "\"100-200*300-500+20\".split(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['100', '200', '300', '500', '20']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "print(re.split('[-+*]', \"100-200*300-500+20\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -31,10 +90,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "d8d6d337e3546525d56a000944c9740e15813df0c7201e0141d0f5ec7fec3247"
+   "hash": "809a8b1a07e4020804bdd2c70349880a598115ac5b29936bc1071d078fa1c77d"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.8.3 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -48,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4
  },
