--- a/LeetCode/test.ipynb
+++ b/LeetCode/test.ipynb
@@ -36,6 +36,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "test = 3\n",
+    "mapDict = {2:\"abc\", 3:\"def\", 4:\"ghi\", 5:\"jkl\", 6:\"mno\", 7:\"pqrs\", 8:\"tuv\", 9:\"wxyz\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
