--- a/programmers/test.ipynb
+++ b/programmers/test.ipynb
@@ -82,6 +82,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "import operator\n",
+    "ops = { \"+\": operator.add, \"-\": operator.sub, \"*\":operator.mul } # etc.\n",
+    "\n",
+    "print(ops[\"+\"](1,1)) # prints 2 \n",
+    "print(ops[\"*\"](4,6)) # prints 2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'atestbtestc'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'test'.join(['a','b','c'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "evalStr = '1+2'\n",
+    "print(eval(evalStr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1973814716928 1973827101120\n"
+     ]
+    }
+   ],
+   "source": [
+    "testList = [1,2,3]\n",
+    "_testList = testList[:]\n",
+    "print(id(testList), id(_testList))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -90,10 +178,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "809a8b1a07e4020804bdd2c70349880a598115ac5b29936bc1071d078fa1c77d"
+   "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.3 ('base')",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -107,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
