아침 스터디 과제 성공.

--- a/LeetCode/test.ipynb
+++ b/LeetCode/test.ipynb
@@ -43,6 +43,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -51,7 +71,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
+   "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
   },
   "kernelspec": {
    "display_name": "Python 3.8.8 ('base')",
