--- a/programmers/test.ipynb
+++ b/programmers/test.ipynb
@@ -170,6 +170,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[([2, -1, 4], [-2, -1, 4]), ([2, -1, 4], [0, -1, 1]), ([2, -1, 4], [5, -8, -12]), ([2, -1, 4], [5, 8, 12]), ([-2, -1, 4], [0, -1, 1]), ([-2, -1, 4], [5, -8, -12]), ([-2, -1, 4], [5, 8, 12]), ([0, -1, 1], [5, -8, -12]), ([0, -1, 1], [5, 8, 12]), ([5, -8, -12], [5, 8, 12])]\n",
+      "10\n",
+      "[([2, -1, 4],), ([-2, -1, 4],), ([0, -1, 1],), ([5, -8, -12],), ([5, 8, 12],)]\n",
+      "[([2, -1, 4], [-2, -1, 4]), ([2, -1, 4], [0, -1, 1]), ([2, -1, 4], [5, -8, -12]), ([2, -1, 4], [5, 8, 12]), ([-2, -1, 4], [0, -1, 1]), ([-2, -1, 4], [5, -8, -12]), ([-2, -1, 4], [5, 8, 12]), ([0, -1, 1], [5, -8, -12]), ([0, -1, 1], [5, 8, 12]), ([5, -8, -12], [5, 8, 12])]\n",
+      "[([2, -1, 4], [-2, -1, 4], [0, -1, 1]), ([2, -1, 4], [-2, -1, 4], [5, -8, -12]), ([2, -1, 4], [-2, -1, 4], [5, 8, 12]), ([2, -1, 4], [0, -1, 1], [5, -8, -12]), ([2, -1, 4], [0, -1, 1], [5, 8, 12]), ([2, -1, 4], [5, -8, -12], [5, 8, 12]), ([-2, -1, 4], [0, -1, 1], [5, -8, -12]), ([-2, -1, 4], [0, -1, 1], [5, 8, 12]), ([-2, -1, 4], [5, -8, -12], [5, 8, 12]), ([0, -1, 1], [5, -8, -12], [5, 8, 12])]\n",
+      "[([2, -1, 4], [-2, -1, 4], [0, -1, 1], [5, -8, -12]), ([2, -1, 4], [-2, -1, 4], [0, -1, 1], [5, 8, 12]), ([2, -1, 4], [-2, -1, 4], [5, -8, -12], [5, 8, 12]), ([2, -1, 4], [0, -1, 1], [5, -8, -12], [5, 8, 12]), ([-2, -1, 4], [0, -1, 1], [5, -8, -12], [5, 8, 12])]\n",
+      "[([2, -1, 4], [-2, -1, 4], [0, -1, 1], [5, -8, -12], [5, 8, 12])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "_list = [[2, -1, 4], [-2, -1, 4], [0, -1, 1], [5, -8, -12], [5, 8, 12]]\n",
+    "combi = list(combinations(_list, 2))\n",
+    "print(combi)\n",
+    "print(len(combi))\n",
+    "for i in range(1, len(_list)+1):\n",
+    "    print(list(combinations(_list,i)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[A,B,C]=[1,2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-bf925d34cb88>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-9-bf925d34cb88>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    3.is_integer()\u001b[0m\n\u001b[1;37m      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import math\n",
+    "3.is_integer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(float(2.03).is_integer())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
