--- a/programmers/test.ipynb
+++ b/programmers/test.ipynb
@@ -284,6 +284,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n",
+      "(1, 3)\n",
+      "(2, 1)\n",
+      "(2, 3)\n",
+      "(3, 1)\n",
+      "(3, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import permutations\n",
+    "\n",
+    "_list = [1, 2, 3]\n",
+    "perm = list(permutations(_list, 2))\n",
+    "#print(perm)\n",
+    "\n",
+    "for item in perm:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
