feat: 벽 부수고 이동하기

--- a/programmers/test.ipynb
+++ b/programmers/test.ipynb
@@ -313,6 +313,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INF = 999999999999\n",
+    "disMap = [list([INF, INF] for _ in range(2)) for _ in range(3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[999999999999, 999999999999], [999999999999, 999999999999]],\n",
+       " [[999999999999, 999999999999], [999999999999, 999999999999]],\n",
+       " [[999999999999, 999999999999], [999999999999, 999999999999]]]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "disMap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test =(2,3,4,5)\n",
+    "print(test[:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isItPossibleCase(stones,k,passCnt) -> bool:\n",
+    "    maxEmptySeriNum = 0\n",
+    "    curEmptySeriNum = 0\n",
+    "    for stoneItem in stones:\n",
+    "        if stoneItem <passCnt:\n",
+    "            curEmptySeriNum += 1\n",
+    "        else:\n",
+    "            if maxEmptySeriNum <curEmptySeriNum:\n",
+    "                maxEmptySeriNum = curEmptySeriNum\n",
+    "            curEmptySeriNum = 0\n",
+    "    if maxEmptySeriNum <curEmptySeriNum:\n",
+    "        maxEmptySeriNum = curEmptySeriNum\n",
+    "\n",
+    "    if (maxEmptySeriNum+1) > k:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 True\n",
+      "2 True\n",
+      "3 True\n",
+      "4 False\n",
+      "5 False\n",
+      "6 False\n",
+      "7 False\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(1,8,1):\n",
+    "    print(n, isItPossibleCase([2, 4, 5, 3, 2, 1, 4, 2, 5, 1], 3, n))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
