--- a/LeetCode/test.ipynb
+++ b/LeetCode/test.ipynb
@@ -142,6 +142,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 24\n",
+    "# print(str(num).split(''))\n",
+    "print(list(map(int,list(str(num))))[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
