feat: 광고 삽입 실패.

--- a/LeetCode/Serialize and Deserialize Binary Tree/test.ipynb
+++ b/LeetCode/Serialize and Deserialize Binary Tree/test.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.TreeNode object at 0x109bf9fa0>\n",
-      "<__main__.TreeNode object at 0x109bf9fa0>\n"
+      "<__main__.TreeNode object at 0x109bb8f10>\n",
+      "<__main__.TreeNode object at 0x109bb8f10>\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
     "    def dictToClass(self, my_dict):\n",
     "        treeNode = TreeNode(IMPOSSIBLE_VALUE)\n",
     "        for key in my_dict:\n",
-    "            setattr(self, key, my_dict[key])\n",
+    "            setattr(treeNode, key, my_dict[key])\n",
     "        return treeNode\n",
     "\n",
     "    def deserialize(self, data):\n",
@@ -80,11 +80,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "result = ser.serialize(root)"
+    "ans.left.left is None\n"
    ]
   },
   {
@@ -148,6 +159,78 @@
     "test.__dict__['val'] = 10\n",
     "\n",
     "test.val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = {}\n",
+    "inputList = ['a', 'b']\n",
+    "for inputItem in inputList:\n",
+    "    test[inputItem] = {'1':'asdf', '2':'qwer'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4396142656"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(test['a'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4395746048"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(test['b'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': {'1': 'asdf', '2': 'qwer'}, 'b': {'1': 'asdf', '2': 'qwer'}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
    ]
   },
   {
